
USER VISIBLE CHANGES:
- Chromatographic peak detection uses adjusted retention times on an aligned
  XCMSnExp object (issue #213, #208).
- New parameter msLevel for processHistory,XCMSnExp.
- New parameter keepAdjustedRtime for filterMsLevel,XCMSnExp, dropChromPeaks,
  XCMSnExp and dropFeatureDefinitions,XCMSnExp.
- Add parameter msLevel to chromatogram,XCMSnExp method (issue #205).

BUG FIXES:
- Fix #201: Warnings: 'readMSData2' is deprecated, thanks to L. Gatto.
- Merge with BioC git after transition
- Fix #191: Excessive memory use in fillPeaks.


CHANGES IN VERSION 2.99.6
-------------------------

NEW FEATURES:
- calibrate,XCMSnExp method that allows to calibrate chromatographic peaks.

USER VISIBLE CHANGES:
- Export phenoDataFromPaths function (issue $195).
- Add arguments mz and rt to featureDefinitions method allowing to extract
  features within the specified ranges.
- Increase n for the density function call in group density-based correspondence
  by 2.
- Replace xcmsDirect.Rnw with rmarkdown-based vignette using the new user
  interface.


BUG FIXES:
- issue #196: removed the unnecessary requirement for same-dimension profile
  matrices in adjustRtime,XCMSnExp,ObiwarpParam.
- issue #194: fixes in retcor.obiwarp: 1) subset raw data if scanrange != NULL.
  2) if the mz range of the two files to be aligned differ, expand them
  correctly. Depending on the profStep and the mz values/ranges the matrices
  were not expanded correctly.
- Potential problems in the plotChromPeakDensity function.


CHANGES IN VERSION 2.99.5
-------------------------

USER VISIBLE CHANGES:
- Re-enable sleep parameter in findPeaks.centWave and findPeaks.matchedFilter.


CHANGES IN VERSION 2.99.4
-------------------------

NEW FEATURES:
- Add plotChromPeaks function to plot the definition (rt and mz range) of
  detected chromatographic peaks of one file into the mz-rt plane. 
- Add plotChromPeakImage function to plot the number of detected peaks along